--- a/Company.G.PL/Views/_ViewImports.cshtml
+++ b/Company.G.PL/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Company.G.PL
 @using Company.G.PL.Models
+@using Company.G.DAL.Models
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
