--- a/Company.G.PL/Views/Department/Index.cshtml
+++ b/Company.G.PL/Views/Department/Index.cshtml
@@ -1,7 +1,61 @@
 ﻿
+@model IEnumerable<Department>
+
 @{
     ViewData["Title"] = "Index";
 }
 
 <h1>All Departments</h1>
+<br />
+<br />
+<a asp-action="Create" asp-controller="Department" class="btn btn-primary">Create Department</a>
+<br />
+<br />
+@if (Model.Count() > 0)
+{
+    <table class="table table-hover table-striped">
+        <thead>
+            <tr>
+                <td> Code</td>
+                <td>Name</td>
+                <td>Date Of Creation</td>
+                <td>Details</td>
+                <td>Update</td>
+                <td>Delete</td>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            { 
+                <tr>
+                    <td>@item.Code</td>
+                    <td>@item.Name</td>
+                    <td>@item.CreateAt</td>
+                    <td>
+                        <a asp-action="Details" class="btn btn-warning">Details</a>
+
+                    </td>
+                    <td>
+                        <a asp-action="Update" class="btn btn-success">Update</a>
+
+                    </td>
+                    <td>
+                        <a asp-action="Delete" class="btn btn-danger">Delete</a>
+
+                    </td>
+                    
+                </tr>
+            }
+        </tbody>
+
+    </table>
+}
+else
+{ 
+    <div class="m-4 alert alert-info">
+        <h4> There is No Departments :(</h4>
+    </div>
+}
+
+
 
