--- a/Company.G.PL/Views/_ViewImports.cshtml
+++ b/Company.G.PL/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Company.G.PL
 @using Company.G.PL.Models
 @using Company.G.DAL.Models
+@using Company.G.PL.Dtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
